--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
+      <p>This site was added by Youssef Ezzat. It uses data from mapbox.com and darksky.net</p>
       <img class="portrait" src='/img/photo.png'>
     </div>
     {{>footer}}
